--- a/app/src/main/res/layout/list_item_classroom.xml
+++ b/app/src/main/res/layout/list_item_classroom.xml
@@ -66,8 +66,7 @@
             app:layout_constraintHorizontal_bias="0.961"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.915"
-            app:numberOfOpenTasks="@{classroom}" />
+            app:layout_constraintVertical_bias="0.915"/>
 
         <TextView
             android:id="@+id/classroom_id"
