--- a/app/src/main/res/layout/fragment_classroom.xml
+++ b/app/src/main/res/layout/fragment_classroom.xml
@@ -28,6 +28,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/classroom_list"
             android:layout_width="0dp"
+            android:visibility="gone"
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
