--- a/app/src/main/res/layout/fragment_create_classroom.xml
+++ b/app/src/main/res/layout/fragment_create_classroom.xml
@@ -17,86 +17,92 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".views.CreateClassroomFragment">
+        tools:context=".views.CreateClassroomFragment"
+        tools:layout_editor_absoluteX="6dp"
+        tools:layout_editor_absoluteY="1dp">
 
         <TextView
             android:id="@+id/create_classroom_title"
             android:layout_width="276dp"
             android:layout_height="37dp"
-            android:layout_marginTop="32dp"
             android:gravity="center"
             android:text="@string/create_classroom_title"
             android:textColor="@android:color/black"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/editText_classroom_name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/editText_classroom_name"
             android:layout_width="219dp"
             android:layout_height="47dp"
-            android:layout_marginTop="32dp"
             android:ems="10"
             android:hint="@string/classroom_name"
             android:importantForAutofill="no"
             android:inputType="textCapWords"
             android:singleLine="true"
             android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/editText_classroom_description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/create_classroom_title"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/create_classroom_title" />
+
+        <EditText
+            android:id="@+id/editText_classroom_description"
+            android:layout_width="219dp"
+            android:layout_height="47dp"
+            android:ems="10"
+            android:hint="@string/classroom_description"
+            android:importantForAutofill="no"
+            android:inputType="textCapWords"
+            android:singleLine="true"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/save_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editText_classroom_name" />
 
         <include
             android:id="@+id/layout_progress_bar"
             layout="@layout/progress_bar_layout"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toTopOf="@+id/create_classroom_title"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="0dp" />
 
 
         <Button
             android:id="@+id/save_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
             android:onClick="@{()->createClassroomViewModel.onSavePressed(editTextClassroomName.getText().toString())}"
             android:text="@string/save"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/generated_link_text"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.52"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText_classroom_name"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/editText_classroom_description" />
 
         <TextView
             android:id="@+id/generated_link_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
             android:gravity="center"
             android:text="@string/generated_classroom_invite_link"
             android:textColor="@android:color/black"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/generated_link"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/save_button"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/save_button" />
 
         <TextView
             android:id="@+id/generated_link"
             android:layout_width="350dp"
             android:layout_height="50dp"
-            android:layout_marginTop="32dp"
             android:background="@drawable/shape"
             android:text="@string/generated_classroom_invite_link"
             android:textColor="@android:color/black"
@@ -104,8 +110,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/generated_link_text"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/generated_link_text" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
