--- a/app/src/main/res/layout/fragment_create_classroom.xml
+++ b/app/src/main/res/layout/fragment_create_classroom.xml
@@ -78,7 +78,7 @@
             android:id="@+id/save_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="@{()->createClassroomViewModel.onSavePressed(editTextClassroomName.getText().toString())}"
+            android:onClick="@{()->createClassroomViewModel.onSavePressed(editTextClassroomName.getText().toString(),editTextClassroomDescription.getText().toString() )}"
             android:text="@string/save"
             app:layout_constraintBottom_toTopOf="@+id/generated_link_text"
             app:layout_constraintEnd_toEndOf="parent"
