--- a/app/src/main/res/layout/list_item_classroom.xml
+++ b/app/src/main/res/layout/list_item_classroom.xml
@@ -20,18 +20,17 @@
         style="@style/Widget.MaterialComponents.CardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/mtrl_card_spacing"
-        android:layout_marginTop="@dimen/mtrl_card_spacing"
-        android:layout_marginRight="@dimen/mtrl_card_spacing"
-        android:layout_marginBottom="@dimen/mtrl_card_spacing"
+        android:layout_marginLeft="@dimen/mtrl_cards_spacing"
+        android:layout_marginTop="@dimen/mtrl_cards_spacing"
+        android:layout_marginRight="@dimen/mtrl_cards_spacing"
+        android:layout_marginBottom="@dimen/mtrl_cards_spacing"
         android:clickable="true"
         android:focusable="true"
         android:minHeight="100dp"
         app:cardElevation="4dp"
         android:foreground="?android:attr/selectableItemBackground"
         android:onClick="@{() -> classroomClickListener.onClick(classroom)}"
-
-        tools:ignore="PrivateResource">
+        >
 
         <!-- Card contents. -->
         <androidx.constraintlayout.widget.ConstraintLayout
