--- a/app/src/main/res/layout/list_item_exercise.xml
+++ b/app/src/main/res/layout/list_item_exercise.xml
@@ -13,25 +13,37 @@
             type="com.example.progresee.adapters.ExerciseClickListener" />
     </data>
 
-    <LinearLayout
+    <com.google.android.material.card.MaterialCardView
+        style="@style/Widget.MaterialComponents.CardView"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:orientation="horizontal">
-    <TextView
-        android:id="@+id/exercise_text"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="4"
-        app:exerciseText="@{exercise}"
-        android:text="@string/exercise_text" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/mtrl_cards_spacing"
+        android:layout_marginTop="@dimen/mtrl_cards_spacing"
+        android:layout_marginRight="@dimen/mtrl_cards_spacing"
+        android:layout_marginBottom="@dimen/mtrl_cards_spacing"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:minHeight="100dp"
+        app:cardElevation="4dp">
 
-        <ImageView
-            android:id="@+id/exercise_status"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="end"
-            android:layout_weight="1"
-            android:contentDescription="@string/exercise_status"
-            app:srcCompat="@android:drawable/checkbox_off_background" />
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/exercise_text"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="4"
+                android:text="@string/exercise_text"
+                app:exerciseText="@{exercise}" />
+
+            <CheckBox
+                android:id="@+id/exercise_status"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 </layout>
