--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <resources>
-        <dimen name="vertical_margin">16dp</dimen>
-        <dimen name="horizontal_margin">8dp</dimen>
-        <dimen name="button_padding">16dp</dimen>
-        <dimen name="button_text_size">18sp</dimen>
-    </resources>
+<resources>
+    <dimen name="vertical_margin">16dp</dimen>
+    <dimen name="horizontal_margin">8dp</dimen>
+    <dimen name="button_padding">16dp</dimen>
+    <dimen name="button_text_size">18sp</dimen>
+    <dimen name="mtrl_cards_spacing">8dp</dimen>
+</resources>
